# branchfs

./: Cargo.toml  README.md
bench/: branchfs_bench.py  quick_bench.sh
src/: branch.rs  daemon.rs  error.rs  fs.rs  fs_ctl.rs  fs_helpers.rs  fs_path.rs  lib.rs  main.rs  storage.rs
src/platform/: linux.rs  macos.rs
tests/: run_all_tests.sh  test_abort.sh  test_branch_create.sh  test_branch_dirs.sh  test_helper.sh  test_integration.rs  test_ioctl.rs  test_quota.sh  test_rename.sh  test_symlink.sh
